Fix map rendering bug – ng-show -> ng-if on tabs

--- a/app/assets/templates/directives/artist-artwork-map.html
+++ b/app/assets/templates/directives/artist-artwork-map.html
@@ -1,2 +1,6 @@
 <h2>This will be the artist's map</h2>
-<map id="artist-artwork-map"></map>
+
+<map id="artist-artwork-map"
+    zoom="14"
+    center="Hanbury Street, London">
+</map>
