--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div ng-controller="ProfileController"><!-- Profile body -->
+<div ng-controller="TabController"><!-- Profile body -->
   <div><!-- Nav -->
     <ul class="nav nav-pills" ng-if="!user.is_artist" ng-init="$parent.tab = 1"><!-- Nav pills -->
       <li ng-class="{ active:isSelected(1) }">
