Add map to 'add new artwork' form

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,5 +1,9 @@
 #artist-artwork-map {
   height: 300px;
   width: 500px;
-  background-color: #ccc;
+}
+
+#artwork-form-map {
+  height: 300px;
+  width: 300px;
 }
