--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -107,7 +107,10 @@
         <label for="description">Description</label>
         <textarea id="description"></textarea>
         <label for="location">Location</label>
-        <!-- Map with draggable marker for setting location? -->
+        <map id="artwork-form-map"
+          zoom="12"
+          center="London, United Kingdom">
+        </map>
         <label for="images">Images</label>
         <!-- Multiple image upload functionality goes here? -->
         <button>Submit</button>
