Create new directive for new artwork form

--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -49,3 +49,13 @@ app.directive('artistArtworkMap', function() {
   };
 
 });
+
+app.directive('newArtworkForm', function() {
+
+  return {
+    restrict: 'E',
+    templateUrl: "<%= asset_path('directives/new-artwork-form.html') %>",
+    controller: 'MapController'
+  }
+
+});
