Add draggable marker to map

--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -7,8 +7,11 @@
   <textarea id="description"></textarea>
   <label for="location">Location</label>
   <map id="artwork-form-map"
-    zoom="12"
-    center="London, United Kingdom">
+    zoom="10"
+    center="[51.508800, -0.127477]">
+    <marker
+      position="[51.508800, -0.127477]"
+      draggable="true"></marker>
   </map>
   <label for="images">Images</label>
   <!-- Multiple image upload functionality goes here? -->
