Attempt to get coordinates from draggable marker - logging coordinates on click, not on initial click and drag though...

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -4,6 +4,12 @@
 }
 
 #artwork-form-map {
+  position: relative;
   height: 300px;
   width: 300px;
+}
+
+#artwork-location-marker {
+  position: absolute;
+  top: 0;
 }
