--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -9,7 +9,7 @@
   <map id="artwork-form-map"
     zoom="10"
     center="[51.508800, -0.127477]">
-    <marker
+    <marker id="artwork-location-marker" on-click="test(position)"
       position="[51.508800, -0.127477]"
       draggable="true"></marker>
   </map>
