--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
     <% end %>
   </main>
 
-  <footer>
+ <!--  <footer>
     <p>&copy; 2015 grafff Ltd.</p>
-  </footer>
+  </footer> -->
 </body>
 </html>
