Display co-ordinates in the browser when marker is moved to new location

--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -14,6 +14,8 @@
       draggable="true"></marker>
   </map>
   <label for="images">Images</label>
+  <p>Latitude: {{ latitude }}</p>
+  <p>Longitude: {{ longitude }}</p>
   <!-- Multiple image upload functionality goes here? -->
   <button>Submit</button>
 </form>
