Get nearest address to marker, display on view

--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -14,8 +14,7 @@
       draggable="true"></marker>
   </map>
   <label for="images">Images</label>
-  <p>Latitude: {{ latitude }}</p>
-  <p>Longitude: {{ longitude }}</p>
+  <p>Nearest address: {{ nearestAddress }}</p>
   <!-- Multiple image upload functionality goes here? -->
   <button>Submit</button>
 </form>
