--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html ng-app="grafffApp">
 <head>
   <title>Grafff</title>
+  <%= include_gon %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %>
   <script src="http://maps.google.com/maps/api/js"></script>
