--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -1,14 +1,14 @@
 <h3>Add new artwork</h3>
 
-<form name="artworkForm" novalidate>
+<form name="newArtworkForm" ng-submit="addArtwork(nearestAddress)" novalidate>
 
-  <label for="title">Title</label>
-  <input id="title" type="text">
+  <label>Title</label>
+  <input type="text" ng-model="newArtwork.title">
 
-  <label for="description">Description</label>
-  <textarea id="description"></textarea>
+  <label>Description</label>
+  <textarea ng-model="newArtwork.description"></textarea>
 
-  <label for="location">Location</label>
+  <label>Location</label>
   <map id="artwork-form-map"
     zoom="11"
     center="[51.508800, -0.127477]">
@@ -18,8 +18,8 @@
   </map>
   <p>Nearest address: {{ nearestAddress }}</p>
 
-  <label for="images">Images</label>
-  <!-- Multiple image upload functionality goes here? -->
+  <label>Add an image</label>
+  <input type="file" file ng-model="newArtwork.image">
 
   <button>Submit</button>
 
