--- a/app/assets/templates/directives/artist-artwork-map.html
+++ b/app/assets/templates/directives/artist-artwork-map.html
@@ -2,7 +2,8 @@
 
 <map id="artist-artwork-map"
     zoom="11"
-    center="51.508800, -0.127477">
+    center="51.508800, -0.127477"
+    scrollwheel="false">
     <marker ng-repeat="marker in userArtworks"
       position="{{ marker.lat }}, {{ marker.lng }}">
     </marker>
