--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -11,7 +11,8 @@
   <label>Location</label>
   <map id="artwork-form-map"
     zoom="11"
-    center="51.508800, -0.127477">
+    center="51.508800, -0.127477"
+    scrollwheel="false">
     <marker id="artwork-location-marker" on-mouseup="getPosition(position)"
       position="[51.508800, -0.127477]"
       draggable="true"></marker>
