--- a/app/assets/templates/views/index.html
+++ b/app/assets/templates/views/index.html
@@ -1,4 +1,9 @@
-<p>This is the Angular index.html view</p>
+<map id="main-map"
+  zoom="11"
+  center="51.508800, -0.127477"
+  scrollwheel="false">
+  <marker></marker>
+</map>
 
 <p>This page will display:</p>
 <ul>
