--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -14,7 +14,7 @@
     center="51.508800, -0.127477"
     scrollwheel="false">
     <marker id="artwork-location-marker" on-mouseup="getPosition(position)"
-      position="[51.508800, -0.127477]"
+      position="51.508800, -0.127477"
       draggable="true"></marker>
   </map>
   <p>Nearest address: {{ nearestAddress }}</p>
