Add info windows on artist's map

--- a/app/assets/templates/views/index.html
+++ b/app/assets/templates/views/index.html
@@ -3,14 +3,15 @@
   center="51.508800, -0.127477"
   scrollwheel="false">
   <div ng-repeat="artwork in allArtworks">
-    <marker on-click="showInfoWindow(event, artwork.id)"
+    <marker id="{{ artwork.id }}" on-click="showInfoWindow(event, artwork.id)"
       position="{{ artwork.lat }}, {{ artwork.lng }}">
     </marker>
-    <info-window id="{{ artwork.id }}" position="{{ artwork.lat }}, {{ artwork.lng }}" visible="true">
-      <div>
-        <h4>{{ artwork.title }}</h4>
-        <p><strong>{{ artwork.user.username }}</strong></p>
-        <p>{{ artwork.description }}</p>
+    <info-window id="{{ artwork.id }}" position="{{ artwork.lat }}, {{ artwork.lng }}" visible-on-marker="{{ artwork.id }}">
+      <div class="infoWindow">
+        <a ng-href="#/artworks/{{ artwork.id }}">
+          <h4>{{ artwork.title }}</h4>
+          <p>{{ artwork.user.username }}</p>
+        </a>
       </div>
     </info-window>
   </div>
