--- a/app/assets/templates/directives/artist-artwork-map.html
+++ b/app/assets/templates/directives/artist-artwork-map.html
@@ -4,7 +4,20 @@
     zoom="11"
     center="51.508800, -0.127477"
     scrollwheel="false">
-    <marker ng-repeat="artwork in userArtworks"
+    
+  <div ng-repeat="artwork in userArtworks">
+    <marker id="{{ artwork.id }}" on-click="showInfoWindow(event, artwork.id)"
       position="{{ artwork.lat }}, {{ artwork.lng }}">
     </marker>
+
+    <info-window id="{{ artwork.id }}" position="{{ artwork.lat }}, {{ artwork.lng }}" visible-on-marker="{{ artwork.id }}">
+      <div class="infoWindow">
+        <a ng-href="#/artworks/{{ artwork.id }}">
+          <h4>{{ artwork.title }}</h4>
+          <p>{{ artwork.user.username }}</p>
+        </a>
+      </div>
+    </info-window>
+  </div>
+
 </map>
