Start adding styling, basic styles for nav added

--- a/app/assets/templates/views/index.html
+++ b/app/assets/templates/views/index.html
@@ -20,13 +20,13 @@
 
 </map>
 
-<p>This page will display:</p>
+<!-- <p>This page will display:</p>
 <ul>
   <li>Main map (will show pins for each artwork)</li>
   <li>Most popular artworks (with link to view all artworks as a list view – cards)</li>
   <li>Latest artworks</li>
   <li>Handful of artists, with link to view all as list view</li>
-</ul>
+</ul> -->
 
 <ul>
   <li ng-repeat="user in allUsers"><a ng-href="#/users/{{ user.id }}/profile">{{ user.first_name }}</a></li>
