--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,34 +10,31 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar navbar-default" role="navigation">
-      <h3><%= link_to 'grafff', root_path, target: "_self" %></h3>
-      <form ng-controller="SearchController" ng-submit="searchUsers()">
-        <input placeholder="Search users and artists" ng-model="query">
-      </form>
-      <div class="container">
-        <% if user_signed_in? %>
-          <li><my-profile-link></my-profile-link></li>
-          <li><%= link_to "Edit account", edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-        <% else %>
-          <li><%= link_to "Log in", new_user_session_path %></li>
-          <li><%= link_to "Sign Up", new_user_registration_path %></li>
-        <% end %>
-      </div>
-    </nav>
-  </header>
-   
-  <main>
-    <% if !user_signed_in? %>
-      <%= yield %>
-    <% elsif current_page? edit_user_registration_path %>
-      <%= yield %>
-    <% elsif user_signed_in? %>
-      <ng-view></ng-view>
+  <nav ng-controller="HomeController">
+    <h3><%= link_to 'grafff', root_path, target: "_self" %></h3>
+    <form ng-controller="SearchController" ng-submit="searchUsers()">
+      <input placeholder="Search users and artists" ng-model="query">
+    </form>
+    <% if user_signed_in? %>
+      <ul>
+        <li><a ng-href="#/users/{{ currentUser.id }}/profile" ng-if="currentUser">{{ currentUser.username }}</a></li>
+        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+      </ul>
+    <% else %>
+      <ul>
+        <li><%= link_to "Log in", new_user_session_path %></li>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+      </ul>
     <% end %>
-  </main>
+  </nav>
+   
+  <% if !user_signed_in? %>
+    <%= yield %>
+  <% elsif current_page? edit_user_registration_path %>
+    <%= yield %>
+  <% elsif user_signed_in? %>
+    <ng-view></ng-view>
+  <% end %>
 
   <footer>
     <p>&copy; 2015 grafff Ltd.</p>
