Add fade to overflowing description on cards

--- a/app/assets/stylesheets/homepage.css.scss
+++ b/app/assets/stylesheets/homepage.css.scss
@@ -38,6 +38,7 @@
     }
 
     .thumbnail-info {
+      position: relative;
       padding: 0 20px 15px;
       text-align: left;
 
@@ -45,6 +46,15 @@
         height: 65px;
         margin-bottom: 10px;
         overflow: hidden;
+        margin-bottom: 25px;
+      }
+
+      .card-footer {
+        position: absolute;
+        bottom: 12px;
+        width: 285px;
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, #fff 70%);
+        padding-top: 70px;
       }
     }
   }
