--- a/app/assets/templates/views/index.html
+++ b/app/assets/templates/views/index.html
@@ -39,8 +39,10 @@
                 <p class="thumbnail-artist">{{ artwork.user.username }}</p>
                 <p class="thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ artwork.address }}</em></p>
                 <p class="thumbnail-description">{{ artwork.description }}</p>
-                <i class="fa fa-thumbs-up likes"> {{ artwork.likes.length }}</i>
-                <i class="fa fa-comment comments"> {{ artwork.comments.length }}</i>
+                <div class="card-footer">
+                  <i class="fa fa-thumbs-up likes"> {{ artwork.likes.length }}</i>
+                  <i class="fa fa-comment comments"> {{ artwork.comments.length }}</i>
+                </div>
               </div>
           </div>
         </a>
