--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -5,7 +5,7 @@ var app = angular.module('grafffApp', [
   'ngMap'
 ]);
 
-app.config(function($routeProvider){
+app.config(['$routeProvider', function($routeProvider){
 
   $routeProvider
   .when('/', {
@@ -24,7 +24,7 @@ app.config(function($routeProvider){
     redirectTo: '/'
   });
 
-});
+}]);
 
 app.directive('file', function() {
   return {
