Fix AWS bugs – images now uploading to S3

--- a/app/assets/templates/directives/new-artwork-form.html
+++ b/app/assets/templates/directives/new-artwork-form.html
@@ -1,6 +1,6 @@
 <h3>Add new artwork</h3>
 
-<form name="newArtworkForm" ng-submit="addArtwork(nearestAddress)" novalidate>
+<form name="newArtworkForm" ng-submit="upload(nearestAddress)" novalidate>
 
   <label>Title</label>
   <input type="text" ng-model="newArtwork.title">
