Add image to seeds, add styling to thumbnail images on artwork cards

--- a/app/assets/templates/views/index.html
+++ b/app/assets/templates/views/index.html
@@ -33,17 +33,19 @@
       <div ng-repeat="artwork in allArtworks | orderBy: '-created_at' | limitTo: '3'" class="col-md-4">
         <a ng-href="#/artworks/{{ artwork.id }}" class="thumbnail-link">
           <div class="thumbnail">
-            <img src="http://lorempixel.com/354/270/abstract">
-              <div class="thumbnail-info">
-                <p class="thumbnail-title"><strong>{{ artwork.title }}</p></strong>
-                <p class="thumbnail-artist">{{ artwork.user.username }}</p>
-                <p class="thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ artwork.address }}</em></p>
-                <p class="thumbnail-description">{{ artwork.description }}</p>
-                <div class="card-footer">
-                  <i class="fa fa-thumbs-up likes"> {{ artwork.likes.length }}</i>
-                  <i class="fa fa-comment comments"> {{ artwork.comments.length }}</i>
-                </div>
+            <div class="thumbnail-image">
+              <img src="{{ artwork.image }}">
+            </div>
+            <div class="thumbnail-info">
+              <p class="thumbnail-title"><strong>{{ artwork.title }}</p></strong>
+              <p class="thumbnail-artist">{{ artwork.user.username }}</p>
+              <p class="thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ artwork.address }}</em></p>
+              <p class="thumbnail-description">{{ artwork.description }}</p>
+              <div class="card-footer">
+                <i class="fa fa-thumbs-up likes"> {{ artwork.likes.length }}</i>
+                <i class="fa fa-comment comments"> {{ artwork.comments.length }}</i>
               </div>
+            </div>
           </div>
         </a>
       </div>
