--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -32,9 +32,18 @@
     padding: 0;
     border-radius: 5px;
 
-    img {
-      border-radius: 5px 5px 0px 0px;
-      margin-bottom: 18px;
+    .thumbnail-image {
+      position: relative;
+      width: 324.5px;
+      height: 270px;
+      background: #ccc;
+      margin-bottom: 16px;
+      overflow: hidden;
+      border-radius: 4.5px 4.5px 0px 0px;
+      
+      img {
+        height: 270px;
+      }
     }
 
     .thumbnail-info {
