--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -1,3 +1,5 @@
+@import 'colors';
+
 #main-map {
   height: 700px;
 }
@@ -11,4 +13,51 @@
   position: relative;
   height: 300px;
   width: 300px;
+}
+
+
+
+/* Info windows */
+
+.gm-style-iw {
+  font-family: 'Helvetica Neue', 'Helvetica', sans-serif;
+  height: 100px;
+  left: 1px !important;
+  top: 1px !important;
+
+  .info-window {
+    width: 380px;
+    height: 115.5px;
+
+    .info-window-image {
+      width: 170px;
+      height: 115.5px;
+      overflow: hidden;
+      display: inline-block;
+
+      img {
+        height: 115.5px;
+        border-radius: 2px 0 0 2px;
+      }
+    }
+
+    a {
+      color: $dark-grey;
+
+      .info-window-title {
+        margin: 10px 0 0 0;
+        color: $black;
+      }
+
+      .info-window-stats {
+        i {
+          margin-right: 5px;
+        }
+      }
+    }
+
+    h4 {
+      
+    }
+  }
 }
