--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -9,7 +9,7 @@
 
 /* What's new section */
 
-.whats-new-container {
+.card-container {
   h3 {
     margin: 10px 0 0;
   }
@@ -28,11 +28,12 @@
   }
   
   /* Styles for each artwork thumbnail/card */
-  .thumbnail {
+  .large-thumbnail {
     padding: 0;
     border-radius: 5px;
+    border: 1px solid $mid-grey;
 
-    .thumbnail-image {
+    .large-thumbnail-image {
       width: 324.5px;
       height: 270px;
       margin-bottom: 16px;
@@ -44,12 +45,12 @@
       }
     }
 
-    .thumbnail-info {
+    .large-thumbnail-info {
       position: relative;
       padding: 0 20px 15px;
       text-align: left;
 
-      .thumbnail-description {
+      .large-thumbnail-description {
         height: 65px;
         margin-bottom: 10px;
         overflow: hidden;
@@ -66,14 +67,14 @@
     }
   }
 
-  .thumbnail:hover {
+  .large-thumbnail:hover {
     box-shadow: 0px 0px 10px 0px $mid-grey;
   }
 
-  .thumbnail-link {
+  .large-thumbnail-link {
     color: $dark-grey;
 
-    .thumbnail-title {
+    .large-thumbnail-title {
       color: $black;
       margin-bottom: 0;
     }
