--- a/app/assets/templates/views/index.html
+++ b/app/assets/templates/views/index.html
@@ -32,26 +32,26 @@
 </map>
 
 <div id="wrapper">
-  <div class="whats-new-container">
+  <div class="card-container">
     <div class="whats-new-header">
       <div class="row">
         <h3 class="col-md-4">What's New</h3>
-        <p class="col-md-4 col-md-offset-4"><a ng-href="" class="btn btn-default">View all</a></p>
+        <p class="col-md-4 col-md-offset-4"><a ng-href="#/artworks" class="btn btn-default">View all</a></p>
       </div>
     </div>
 
     <div class="row">
       <div ng-repeat="artwork in allArtworks | orderBy: '-created_at' | limitTo: '3'" class="col-md-4">
-        <a ng-href="#/artworks/{{ artwork.id }}" class="thumbnail-link">
-          <div class="thumbnail">
-            <div class="thumbnail-image">
+        <a ng-href="#/artworks/{{ artwork.id }}" class="large-thumbnail-link">
+          <div class="large-thumbnail">
+            <div class="large-thumbnail-image">
               <img src="{{ artwork.image }}">
             </div>
-            <div class="thumbnail-info">
-              <p class="thumbnail-title"><strong>{{ artwork.title }}</p></strong>
-              <p class="thumbnail-artist">{{ artwork.user.username }}</p>
-              <p class="thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ artwork.address }}</em></p>
-              <p class="thumbnail-description">{{ artwork.description }}</p>
+            <div class="large-thumbnail-info">
+              <p class="large-thumbnail-title"><strong>{{ artwork.title }}</p></strong>
+              <p class="large-thumbnail-artist">{{ artwork.user.username }}</p>
+              <p class="large-thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ artwork.address }}</em></p>
+              <p class="large-thumbnail-description">{{ artwork.description }}</p>
               <div class="card-footer">
                 <i class="fa fa-thumbs-up likes"> {{ artwork.likes.length }}</i>
                 <i class="fa fa-comment comments"> {{ artwork.comments.length }}</i>
