Add file fields to devise registration views. Successfully upload a profile picture and display on profile page

--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -1,6 +1,6 @@
 <div><!-- Profile header -->
   <div><!-- Profile picture -->
-    <img src="http://lorempixel.com/200/200/abstract">
+    <img src="{{ user.profile_pic.url }}">
   </div>
 
   <div><!-- Profile information -->
