--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,6 +36,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :profile_pic %><br />
+    <%= f.file_field :profile_pic %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %>
     <% if @validatable %>
     <% end %><br />
