--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,6 +28,11 @@
     <%= f.text_area :bio %>
   </div>
 
+  <div class="field">
+    <%= f.label :profile_pic %><br />
+    <%= f.file_field :profile_pic %>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
