Add user's profile picture to the nav when signed-in

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -52,5 +52,16 @@ nav {
         background: $light-grey;
       }
     }
+
+    .signed-in {
+      margin: 14px 0px;
+
+      .nav-profile-pic {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        margin-right: 5px;
+      }
+    }
   }
 }
