--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
     </form>
     <% if user_signed_in? %>
       <ul>
-        <li><a ng-href="#/users/{{ currentUser.id }}/profile" ng-if="currentUser">{{ currentUser.username }}</a></li>
-        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+        <li class="signed-in"><a ng-href="#/users/{{ currentUser.id }}/profile" ng-if="currentUser"><img src="{{ currentUser.profile_pic.url }}" class="nav-profile-pic"> {{ currentUser.username }}</a></li>
+        <li class="signed-in"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
       </ul>
     <% else %>
       <ul>
