Only show search bar if user logged in. Redirect to results page on search submit

--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -24,6 +24,10 @@ app.config(['$routeProvider', function($routeProvider){
     controller: 'HomeController',
     templateUrl: "<%= asset_path('views/all-artwork.html') %>"
   })
+  .when('/search', {
+    controller: 'SearchController',
+    templateUrl: "<%= asset_path('views/search-results.html') %>"
+  })
   .otherwise({
     redirectTo: '/'
   });
