Search bar in nav functioning properly

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
 <body>
   <nav ng-controller="HomeController">
     <h3><%= link_to 'grafff', root_path, target: "_self" %></h3>
-    <form ng-submit="searchUsers(query)" ng-if="currentUser">
+    <form ng-submit="searchUsers()" ng-if="currentUser">
       <i class="fa fa-search"></i>
-      <input placeholder="Search users and artists" ng-model="query">
+      <input id="search-input" placeholder="Search users and artists">
     </form>
     <% if user_signed_in? %>
       <ul>
