--- a/app/assets/javascripts/grafff_app/app.js.erb
+++ b/app/assets/javascripts/grafff_app/app.js.erb
@@ -25,7 +25,7 @@ app.config(['$routeProvider', function($routeProvider){
     templateUrl: "<%= asset_path('views/all-artwork.html') %>"
   })
   .when('/search', {
-    controller: 'HomeController',
+    controller: 'SearchController',
     templateUrl: "<%= asset_path('views/search-results.html') %>"
   })
   .otherwise({
