Add styling to artist's artworks panel

--- a/app/assets/templates/views/all-artwork.html
+++ b/app/assets/templates/views/all-artwork.html
@@ -14,7 +14,7 @@
               <img src="{{ artwork.image }}">
             </div>
             <div class="thumbnail-info">
-              <p class="thumbnail-title"><strong>{{ artwork.title }}</p></strong>
+              <p class="thumbnail-title"><strong>{{ artwork.title }}</strong></p>
               <p class="thumbnail-artist">{{ artwork.user.username }}</p>
               <p class="thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ artwork.address }}</em></p>
               <p class="thumbnail-description">{{ artwork.description }}</p>
