--- a/app/assets/templates/views/user-profile.html
+++ b/app/assets/templates/views/user-profile.html
@@ -1,6 +1,6 @@
 <div><!-- Profile header -->
   <div><!-- Profile picture -->
-    <img src="{{ user.profile_pic.url }}">
+    <img src="{{ user.profile_pic.url }}" class="profile-picture">
   </div>
 
   <div><!-- Profile information -->
@@ -24,83 +24,97 @@
   </div>
 </div>
 
-<div ng-controller="ProfileController"><!-- Profile body -->
-  <div><!-- Nav -->
-    <ul class="nav nav-pills" ng-if="!user.is_artist" ng-init="$parent.tab = 1"><!-- Nav pills -->
-      <li ng-class="{ active:isSelected(1) }">
-        <a href ng-click="$parent.selectTab(1)">Activity Feed</a>
-      </li>
-      <li ng-class="{ active:isSelected(2) }">
-        <a href ng-click="$parent.selectTab(2)">Likes</a>
-      </li>
-      <li ng-class="{ active:isSelected(3) }">
-        <a href ng-click="$parent.selectTab(3)">Artists</a>
-      </li>
-    </ul>
-    <ul class="nav nav-pills" ng-if="user.is_artist" ng-init="$parent.tab = 4"><!-- Nav pills -->
-      <li ng-class="{ active:isSelected(4) }">
-        <a href ng-click="$parent.selectTab(4)">Artworks</a>
-      </li>
-      <li ng-class="{ active:isSelected(5) }">
-        <a href ng-click="$parent.selectTab(5)">Map</a>
-      </li>
-      <li ng-if="currentUser.id === user.id" ng-class="{ active:isSelected(6) }">
-        <a href ng-click="$parent.selectTab(6)">Add Artwork</a>
-      </li>
-    </ul>
-  </div>
-  
-  <div><!-- Content -->
-    <div ng-if="isSelected(1)"><!-- Activity Feed -->
-      <p>Activity Feed</p>
+<div id="wrapper">
+  <div ng-controller="ProfileController"><!-- Profile body -->
+    <div><!-- Nav -->
+      <ul class="nav nav-pills" ng-if="!user.is_artist" ng-init="$parent.tab = 1"><!-- Nav pills -->
+        <li ng-class="{ active:isSelected(1) }">
+          <a href ng-click="$parent.selectTab(1)">Activity Feed</a>
+        </li>
+        <li ng-class="{ active:isSelected(2) }">
+          <a href ng-click="$parent.selectTab(2)">Likes</a>
+        </li>
+        <li ng-class="{ active:isSelected(3) }">
+          <a href ng-click="$parent.selectTab(3)">Artists</a>
+        </li>
+      </ul>
+      <ul class="nav nav-pills" ng-if="user.is_artist" ng-init="$parent.tab = 4"><!-- Nav pills -->
+        <li ng-class="{ active:isSelected(4) }">
+          <a href ng-click="$parent.selectTab(4)">Artworks</a>
+        </li>
+        <li ng-class="{ active:isSelected(5) }">
+          <a href ng-click="$parent.selectTab(5)">Map</a>
+        </li>
+        <li ng-if="currentUser.id === user.id" ng-class="{ active:isSelected(6) }">
+          <a href ng-click="$parent.selectTab(6)">Add Artwork</a>
+        </li>
+      </ul>
     </div>
-    <div ng-if="isSelected(2)"><!-- Likes -->
-      <div ng-repeat="artwork in likedArtworks"><!-- Artwork card -->
-        <a ng-href="#/artworks/{{ artwork.id }}">
-          <div><!-- Card wrapper -->
-            <img src="http://lorempixel.com/150/100/abstract">
-            <h4>{{ artwork.title }}</h4>
-            <ul>
-              <li>Artist: {{ artwork.user.first_name }} {{ artwork.user.last_name }}</li>
-              <li>Description: {{ artwork.description }}</li>
-              <li>Likes: {{ artwork.likes.length }}</li>
-              <li>Comments: {{ artwork.comments.length }}</li>
-            </ul>
-          </div>
-        </a>
+    
+    <div><!-- Content -->
+      <div ng-if="isSelected(1)"><!-- Activity Feed -->
+        <p>Activity Feed</p>
       </div>
-    </div>
-    <div ng-if="isSelected(3)"><!-- Artists -->
-        <div ng-repeat="artist in followedArtists"><!-- Artist card -->
-          <a ng-href="#/users/{{ artist.id }}/profile">
+      <div ng-if="isSelected(2)"><!-- Likes -->
+        <div ng-repeat="artwork in likedArtworks"><!-- Artwork card -->
+          <a ng-href="#/artworks/{{ artwork.id }}">
             <div><!-- Card wrapper -->
               <img src="http://lorempixel.com/150/100/abstract">
-              <h4>{{ artist.username }}</h4>
-              <p>{{ artist.bio }}</p>
+              <h4>{{ artwork.title }}</h4>
+              <ul>
+                <li>Artist: {{ artwork.user.first_name }} {{ artwork.user.last_name }}</li>
+                <li>Description: {{ artwork.description }}</li>
+                <li>Likes: {{ artwork.likes.length }}</li>
+                <li>Comments: {{ artwork.comments.length }}</li>
+              </ul>
             </div>
           </a>
         </div>
-    </div>
-    <div ng-if="isSelected(4)"><!-- Artworks -->
-      <div ng-repeat="artwork in userArtworks | orderBy: '-created_at'"><!-- Artwork card -->
-        <a ng-href="#/artworks/{{ artwork.id }}">
-          <div><!-- Card wrapper -->
-            <img src="http://lorempixel.com/150/100/abstract">
-            <h4>{{ artwork.title }}</h4>
-            <ul>
-              <li>Description: {{ artwork.description }}</li>
-              <li>Likes: {{ artwork.likes.length }}</li>
-              <li>Comments: {{ artwork.comments.length }}</li>
-            </ul>
-          </div>
-        </a>
       </div>
-    </div>
-    <div ng-if="isSelected(5)"><!-- Map -->
-      <artist-artwork-map></artist-artwork-map>
-    </div>
-    <div ng-if="isSelected(6)"><!-- Add artwork form -->
-      <new-artwork-form></new-artwork-form>
+      <div ng-if="isSelected(3)"><!-- Artists -->
+          <div ng-repeat="artist in followedArtists"><!-- Artist card -->
+            <a ng-href="#/users/{{ artist.id }}/profile">
+              <div><!-- Card wrapper -->
+                <img src="http://lorempixel.com/150/100/abstract">
+                <h4>{{ artist.username }}</h4>
+                <p>{{ artist.bio }}</p>
+              </div>
+            </a>
+          </div>
+      </div>
+
+      <div ng-show="isSelected(4)"><!-- Artworks -->
+        <div class="card-container">
+          <div class="row">
+            <div ng-repeat="artwork in userArtworks | orderBy: '-created_at'" class="col-md-3">
+              <a ng-href="#/artworks/{{ artwork.id }}" class="thumbnail-link">
+                <div class="thumbnail">
+                  <div class="thumbnail-image">
+                    <img src="{{ artwork.image }}">
+                  </div>
+                  <div class="thumbnail-info">
+                    <p class="thumbnail-title"><strong>{{ artwork.title }}</strong></p>
+                    <p class="thumbnail-artist">{{ artwork.user.username }}</p>
+                    <p class="thumbnail-address"><em><i class="fa fa-map-marker"></i> {{ artwork.address }}</em></p>
+                    <p class="thumbnail-description">{{ artwork.description }}</p>
+                    <div class="card-footer">
+                      <i class="fa fa-thumbs-up likes"> {{ artwork.likes.length }}</i>
+                      <i class="fa fa-comment comments"> {{ artwork.comments.length }}</i>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div ng-if="isSelected(5)"><!-- Map -->
+        <artist-artwork-map></artist-artwork-map>
+      </div>
+      <div ng-if="isSelected(6)"><!-- Add artwork form -->
+        <new-artwork-form></new-artwork-form>
+      </div>
     </div>
   </div>
 </div>
