--- a/app/assets/stylesheets/profile-page.scss
+++ b/app/assets/stylesheets/profile-page.scss
@@ -9,10 +9,32 @@
   .profile-header-wrapper {
     width: 1040px;
     margin: 0 auto;
+
+    h2 {
+      display: inline-block;
+      font-size: 35px;
+      margin: 10px 7px 10px 0;
+    }
+
+    .profile-info {
+      p {
+        font-size: 50px;
+      }
+    }
+
+    .role {
+      display: inline-block;
+      color: $dark-grey;
+
+      strong {
+        font-size: 15px;
+      }
+    }
   }
 
   .profile-picture {
     width: 100%;
+    border-radius: 6px;
   }
 }
 
