--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,10 @@
   </div>
 
   <footer>
-    <p>&copy; 2015 grafff Ltd.</p>
+    <div class="footer-wrapper">
+      <h4><%= link_to 'grafff', root_path, target: "_self" %></h4>
+      <p>&copy; 2015 grafff Ltd.</p>
+    </div>
   </footer>
 </body>
 </html>
