Try out a snazzy map

--- a/app/assets/templates/views/index.html
+++ b/app/assets/templates/views/index.html
@@ -1,7 +1,8 @@
 <map id="main-map"
   zoom="13"
   center="51.508800, -0.127477"
-  scrollwheel="false">
+  scrollwheel="false"
+  styles="[{'featureType':'landscape.natural','elementType':'geometry.fill','stylers':[{'visibility':'on'},{'color':'#e0efef'}]},{'featureType':'poi','elementType':'geometry.fill','stylers':[{'visibility':'on'},{'hue':'#1900ff'},{'color':'#c0e8e8'}]},{'featureType':'road','elementType':'geometry','stylers':[{'lightness':100},{'visibility':'simplified'}]},{'featureType':'road','elementType':'labels','stylers':[{'visibility':'off'}]},{'featureType':'transit.line','elementType':'geometry','stylers':[{'visibility':'on'},{'lightness':700}]},{'featureType':'water','elementType':'all','stylers':[{'color':'#7dcdcd'}]}]">
 
   <div ng-repeat="artwork in allArtworks">
     <marker id="{{ artwork.id }}" on-click="showInfoWindow(event, artwork.id)"
