--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -5,6 +5,11 @@ nav {
   height: 60px;
   border-bottom: 1px solid $mid-grey;
   
+  #logo img {
+    width: 110px;
+    margin: 18px 0 0 35px;
+  }
+
   h3 {
     display: inline-block;
   }
